--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         </activity>
         <activity android:name=".Register" />
         <activity android:name=".Categories" />
-        <activity android:name=".AdapterActivityTry"></activity>
+        <activity android:name=".AdapterActivityTry" />
+        <activity android:name=".CartActivity"></activity>
     </application>
 
 </manifest>
